<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--GENERAL-->
    <string name="app_name">App</string>
    <string name="action_settings">Menu</string>

    <!--FORMULAIRES-->

    <!--Titres-->
    <string name="titre_form_creer_categorie">Créer une catégorie</string>
    <string name="titre_form_creer_champ">Créer un champ</string>
    <string name="titre_form_editer_categorie">Editer une catégorie</string>
    <string name="titre_ajouter_champ">Ajouter des champs</string>

    <!--Boutons-->
    <string name="texte_bouton_form_ajouter_champ">Ajouter un champ</string>
    <string name="texte_bouton_form_valider">Envoyer</string>
    <string name="texte_bouton_form_annuler">Annuler</string>
    <string name="texte_bouton_dialog_ajouter_champ_valider">Valider</string>
    <string name="texte_bouton_dialog_ajouter_champ_annuler">Annuler</string>

    <!--Labels champs de formulaires-->
    <string name="label_nom_champ">Nom</string>
    <string name="label_type_champ">Type</string>

    <!--Placeholders/Hints-->
    <string name="placeholder_type_categorie">Saisir le type</string>
    <string name="placeholder_nom_champ">Saisir le nom du champ</string>

    <!--Dialogues modaux-->
    <string name="dialog_ajout_categorie_succes">Insertion réussie</string>
    <string name="dialog_ajout_categorie_echec">Insertion échouée</string>
    <string name="dialog_ajout_champ_succes">Insertion réussie</string>
    <string name="dialog_ajout_champ_echec">Insertion échouée</string>


    <!--LISTES-->

    <!--Titres-->
    <string name="titre_liste_categories">Liste des catégories</string>

    <!--Placeholders/Hints-->
    <string name="placeholder_filter_categories">Rechercher une catégorie</string>

    <!--MESSAGES D'ERREURS-->
    <string name="error_msg_fail_retrieve_data">La récupération des données a échoué. Erreur:</string>
    <string name="error_msg_fail_insert_data">L\'insertion des données a échoué. Erreur:</string>

</resources>
