<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root"
        >

    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:textSize="@dimen/form_titles"
              android:id="@+id/titreFormCategorie"
              android:text="@string/titre_form_creer_categorie"
              android:gravity="center"
              android:textColor="@color/white"
              android:background="@color/light_blue_900"
            />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:orientation="vertical"
                  android:padding="@dimen/form_base_padding"
            >
        <EditText android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:hint="@string/placeholder_type_categorie"
                  android:textColorHint="@color/placeholder_text_color"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:text="@string/titre_ajouter_champ"
                  android:textSize="@dimen/form_titles"
                  android:gravity="left"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2"
                  android:orientation="horizontal"
                  android:padding="@dimen/form_base_padding"
            >
        <Spinner android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="3"
                 android:id="@+id/spinnerAjouterChamp"
                />
        <ImageView android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:background="@color/cyan_500"
                />
    </LinearLayout>


    <ListView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="7"
              android:id="@+id/listViewChamps"
            >

    </ListView>

    <Button android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/boutonValiderCategorie"
            android:background="@color/green_600"
            android:textColor="@color/white"
            android:text="@string/texte_bouton_form_valider"
            />

</LinearLayout>