<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/grey_200"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titre_form_creer_champ"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:gravity="center"
            android:height="50dp"
            android:background="@color/light_blue_800"
            android:textColor="@color/white"
            />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="7"
                  android:orientation="vertical"
                  android:padding="@dimen/form_base_margin"
            >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="@dimen/form_base_margin"
                >

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_nom_champ"
                    android:singleLine="true"
                    android:height="50dp"
                    android:gravity="center"
                    />
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    android:id="@+id/editTextNomChamp"
                    android:hint="@string/placeholder_nom_champ"
                    android:textSize="@dimen/form_label"
                    android:textColorHint="@color/placeholder_text_color"
                    android:singleLine="true"
                    />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="7"
                      android:orientation="horizontal"
                      android:layout_marginTop="@dimen/form_base_margin"
                >

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_type_champ"
                    android:singleLine="true"
                    android:height="50dp"
                    android:gravity="center"
                    />
            <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    android:id="@+id/spinnerTypeChamp"
                    />

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                      android:layout_weight="2"
                      android:orientation="horizontal"
                      android:gravity="bottom"
                >
            <Button
                    android:id="@+id/boutonAnnulerChamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/orange_800"
                    android:padding="5dp"
                    android:text="Annuler"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
                    android:layout_marginStart="150dp"
                    />
            <Button
                    android:id="@+id/boutonAjouterChamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue_800"
                    android:padding="5dp"
                    android:text="Valider"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true" android:layout_toEndOf="@+id/boutonAnnulerCategorie"
                    android:layout_marginStart="32dp"
                    />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>